# onnx-wrapper

./: CMakeLists.txt
cmake/: abseil_dependencies.cmake  onnx-wrapper-config.cmake.in
src/: empty.cpp  onnx_wrapper.cpp
